--- a/src/css/base.css
+++ b/src/css/base.css
@@ -5,6 +5,8 @@
   --main-color: #fafafa;
   --main-background-color: #1c1d20;
   --color-text: rgba(250, 250, 250, 0.6);
+  --swiper-btn-disabled: #3B3B3B;
+  --project-img-wrapper: #242527;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
