--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,3 +1,227 @@
-.header {
+.projects {
+  width: 100vw;
+  max-width: 320px;
+  padding: 16px;
+}
+
+.projects-header {
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--color-text);
+  text-align: left;
+  margin-bottom: 32px;
+}
+
+.projects-list {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
+
+.projects-item {
+  display: flex;
+  flex-direction: column;
+  border-radius: 24px;
+  overflow: hidden;
+}
+
+.project-content {
+  padding: 32px;
+  background-color: var(--main-color);
+}
+
+.tags-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+  padding: 0;
+  list-style: none;
+  margin-bottom: 96px;
+}
+
+.tag {
+  padding: 13px 18px;
+  font-size: 16px;
+  color: var(--main-background-color);
+  background-color: transparent;
+  border: 1px solid rgba(28, 29, 32, 0.2);
+  border-radius: 60px;
+  display: inline-block;
+}
+
+.project-descr {
+  font-size: 24px;
+  font-weight: 500;
+  color: var(--main-background-color);
+  margin: 0 0 32px;
+}
+
+.project-btn {
+  padding: 13px 32px;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--main-color);
+  background-color: var(--accent-color);
+  border: none;
+  border-radius: 60px;
+  cursor: pointer;
+  transition: background-color 450ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.project-btn:hover {
+  background-color: var(--accent-color-hover);
+}
+
+.project-img-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 16px;
+  background-color: var(--project-img-wrapper);
+  border: none;
+}
+
+.project-img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  display: block;
+}
+
+
+
+.slider-navigation {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  padding: 32px 0;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  border: 1px solid rgba(250, 250, 250, 0.7);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.swiper-button-prev svg,
+.swiper-button-next svg {
+  fill: var(--main-color);
+  width: 20px;
+  height: 20px;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.swiper-button-disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  fill: var(--swiper-btn-disabled);
+}
+
+.swiper-button-disabled svg {
+  fill: var(--swiper-btn-disabled);
+}
+
+@media screen and (min-width: 320px) {
+  .projects {
+    width: 100%;
+    max-width: 375px;
+    margin: 0 auto;
+    padding: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .projects {
+    max-width: 1280px;
+    padding: 64px 32px 0;
+  }
+
+  .project-content {
+    padding: 64px;
+  }
+
+  .tags-list {
+    margin-bottom: 164px;
+  }
+
+  .tag {
+    padding: 18px;
+  }
+
+  .project-descr {
+    font-size: 44px;
+    font-weight: 600;
+    margin: 0 0 32px;
+  }
+
+  .project-btn {
+    padding: 18px 50px;
+  }
+
+  .project-img-wrapper {
+    width: 100%;
+    max-width: 1440px;
+    display: flex;
+    padding: 120px 45px;
+    background-color: var(--project-img-wrapper);
+    border: none;
+  }
+
+  .project-img {
+    max-width: 614px;
+    max-height: 100%;
+    object-fit: contain;
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .projects {
+    max-width: 1440px;
+  }
+
+  .tags-list {
+    margin-bottom: 223px;
+  }
+
+  .projects-item {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin: 0;
+  }
+
+  .project-img-wrapper {
     position: relative;
+    width: 100%;
+    max-width: 1440px;
+    padding: 120px 37px;
+    box-sizing: border-box;
+  }
+
+  .project-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: auto;
+    max-width: calc(100% - 74px);
+    max-height: calc(100% - 240px);
+    object-fit: contain;
+  }
 }
