--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,8 @@
 :root {
   color: #0c0c0c;
   background-color: #1c1d20;
-
+  cards: #242527;
+  button-text: #ed3b44;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
